--- a/src/content/pages/Themes/Detail/ThemeDetail.scss
+++ b/src/content/pages/Themes/Detail/ThemeDetail.scss
@@ -27,13 +27,15 @@
     width: 100%;
     overflow-y: scroll;
 
-    .contentTitle {
+    .content {
       display: flex;
       width: 100%;
       justify-content: space-between;
+      margin-top: 1%;
+      margin-bottom: 1%;
 
       .title {
-        max-width: 20rem;
+        max-width: 30rem;
 
         .truncate {
           white-space: nowrap;
@@ -42,8 +44,13 @@
         }
       }
 
-      .sentiment {
+      .contentLabels {
+        display: flex
+      }
 
+      .contentLabel {
+        margin-left: 1%;
+        margin-right: 1%;
       }
     }
   }
