--- a/src/content/pages/Themes/Detail/ThemeDetail.scss
+++ b/src/content/pages/Themes/Detail/ThemeDetail.scss
@@ -1,62 +1,33 @@
-
-.gridContainer {
-  margin: 0;
-  height: 85vh;
+.contentsContainer {
+  height: 45vh;
   width: 100%;
-  .gridItem {
-    height: 100%;
-
-    .graph-wrapper {
-      width: 100%;
-      height: 50%;
-      border-radius: 6px;
-    }
-  }
 }
 
-.contents-card {
+.metabaseContainer {
+  width: 100%;
+  height: 45vh;
+}
+.contentsCard {
   height: 100%;
-  position: relative;
-
-  .card-body {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    margin-top: 53px;
-    padding: 0 16px;
-    width: 100%;
-    overflow-y: scroll;
-
-    .content {
-      display: flex;
-      width: 100%;
-      justify-content: space-between;
-      margin-top: 1%;
-      margin-bottom: 1%;
-
-      .title {
-        max-width: 30rem;
-
-        .truncate {
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
-        }
-      }
-
-      .contentLabels {
-        display: flex
-      }
-
-      .contentLabel {
-        margin-left: 1%;
-        margin-right: 1%;
-      }
-    }
+  overflow-y: scroll;
+  [class*="MuiAvatar-img"] {
+    object-fit: scale-down;
   }
 }
 
-.graph-card {
-  height: 50%;
-  width: 100%;
+.filtersContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.textFilter {
+  margin-right: 1rem;
+}
+.errorMessageContainer {
+  text-align: center;
+  margin-top: 1rem;
+  > span {
+    font-weight: bold;
+  }
 }
